--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.3",
