--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
